--- a/WorkflowEngine/WorkflowEngine.csproj
+++ b/WorkflowEngine/WorkflowEngine.csproj
@@ -43,9 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileArchiver.cs" />
+    <Compile Include="FileExtractor.cs" />
+    <Compile Include="ITask.cs" />
     <Compile Include="IWorkflow.cs" />
+    <Compile Include="PdfConverter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VideoEditor.cs" />
     <Compile Include="Workflow.cs" />
     <Compile Include="WorkflowEngine.cs" />
   </ItemGroup>
